--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,9 +57,11 @@
             </ul>
         </div>
 
+        {% if site.license.software and site.license.docs %}
         <p>
             Licensed under <a href="{{ site.license.software_url }}" target="_blank">{{ site.license.software }}</a>, documentation under <a href="{{ site.license.docs_url }}">{{ site.license.docs }}</a>.
         </p>
+        {% endif %}
         <p>
             Documentation template by <a href="http://getbootstrap.com">Bootstrap team</a>, generated with <a href="https://github.com/allejo/jekyll-docs-theme">Jekyll Docs Theme</a>
         </p>
